--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Scrollbar width */
 ::-webkit-scrollbar {
   width: 11px;
